--- a/frontend/src/js/pages/main/partials/_sidebar-profile.hbs
+++ b/frontend/src/js/pages/main/partials/_sidebar-profile.hbs
@@ -12,7 +12,7 @@
             <a href="/account" class="btn btn-sm btn-light">
                 Twój profil
             </a>
-            <a href="/auth/logout" class="btn btn-sm px-2 btn-light">
+            <a href="/log/out" class="btn btn-sm px-2 btn-light">
                 <svg viewBox="0 0 16 16" class="bi bi-power" fill="currentColor">
                     <path fill-rule="evenodd"
                         d="M5.578 4.437a5 5 0 1 0 4.922.044l.5-.866a6 6 0 1 1-5.908-.053l.486.875z" />
