improved implementation of modal window tabs

--- a/frontend-react/src/components/Modals/AddExamination.scss
+++ b/frontend-react/src/components/Modals/AddExamination.scss
@@ -1,3 +1,14 @@
+.tabbable {
+
+	&.nav-tabs {
+  	flex-wrap: nowrap;
+
+		.nav-link {
+  		white-space: nowrap;
+		}
+	}
+}
+
 .row-value {
       > div {
     padding-top:.5em !important;
