--- a/frontend-react/src/components/Pages/progressbar.scss
+++ b/frontend-react/src/components/Pages/progressbar.scss
@@ -8,10 +8,11 @@
 		position:fixed;
 		left:0;
 		right:0;
-    bottom:0;
+    top:0em;
     height:.3em;
     margin:0;
-    padding:0;
+		padding:0;
+		z-index:10000;
   }
 }
 
