--- a/frontend-react/src/App.scss
+++ b/frontend-react/src/App.scss
@@ -1,6 +1,11 @@
-.dropdown-toggle.noCaret:after {
-  display: none;
+.dropdown-toggle {
+	&.noCaret {
+		&:before, &:after {
+  		display: none	 !important;
+		}
+	}
 }
+
 //
 
 .no-outline {
@@ -45,4 +50,14 @@ nav.fixed-bottom {
     transform: translate(-0%,240%);
     font-size:.8em;
   }
+}
+
+.cornerButton {
+	display:flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	align-items: center;
+	position:fixed;
+	bottom:1.5em;
+	right:1.5em;
 }
