--- a/frontend-react/src/components/Pages/examinations/list-items.scss
+++ b/frontend-react/src/components/Pages/examinations/list-items.scss
@@ -1,50 +1,36 @@
-
 div.row-item {
-		transition: .20s;
+	transition: .20s;
+	display:flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	padding-left:1em;
+
+	border-bottom:rgba(0,0,0,.2) solid 1px;
 
 	> div {
     padding-top:.5em !important;
     padding-bottom:.5em !important;
   }
 
-  &.itemInGroup {
-    border-left:rgba(0,0,0,.7) solid 3px;
-  }
-
-  nav {
-    display:none;
-  }
-
   &:hover{
 		transition: .20s;
-    background-color: rgba(0,0,0,.1);
-    nav {
-      display:flex;
-      position:absolute;
-			right:1em;
-    }
+    background-color: rgba(124, 94, 94, 0.1);
   }
 }
 
 div.row-group {
 	transition: .20s;
+	border-bottom:rgba(0,0,0,.2) solid 1px;
 
   > div {
     padding-top:.5em !important;
     padding-bottom:.5em !important;
   }
-  nav {
-		display:none;
-  }
 
   &:hover{
 		transition: .20s;
     background-color: rgba(0,0,0,.1);
-    nav {
-      display:flex;
-      position:absolute;
-      right:1em;
-    }
   }
 }
 
