--- a/frontend-react/src/components/Pages/examinations/list-items.scss
+++ b/frontend-react/src/components/Pages/examinations/list-items.scss
@@ -1,37 +1,63 @@
+$selection-color: rgb(255,188,0);
+
 div.row-item {
-	transition: .20s;
 	display:flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
 	padding-left:1em;
 
-	border-bottom:rgba(0,0,0,.2) solid 1px;
+	padding-top:.5em !important;
+	padding-bottom:.5em !important;
 
-	> div {
-    padding-top:.5em !important;
-    padding-bottom:.5em !important;
-  }
+	border-bottom:rgba(0,0,0,.2) solid 1px;
+	transition: .20s;
+
+	.item-name { font-weight: 100;}
+	// .item-badge {}
+	.item-description { font-size: .8em;}
 
   &:hover{
 		transition: .20s;
     background-color: rgba(124, 94, 94, 0.1);
   }
+	&.selected {
+		background-color: $selection-color;
+	}
+	&.selected:hover {
+		background-color: darken($selection-color,5);
+	}
 }
 
 div.row-group {
+	display:flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+
 	transition: .20s;
 	border-bottom:rgba(0,0,0,.2) solid 1px;
 
-  > div {
-    padding-top:.5em !important;
-    padding-bottom:.5em !important;
-  }
+	padding-top:.5em !important;
+	padding-bottom:.5em !important;
+	padding-left:.5em !important;
+
+	.item-name { font-weight: 800;}
+	// .item-badge {}
+	.item-description { font-size: .8em;}
 
   &:hover{
 		transition: .20s;
     background-color: rgba(0,0,0,.1);
-  }
+	}
+
+	&.selected {
+		background-color: $selection-color;
+	}
+	&.selected:hover {
+		background-color: darken($selection-color,5);
+	}
+
 }
 
 .item-value {
@@ -39,7 +65,7 @@ div.row-group {
   padding-bottom:.3em;
 
   &:hover {
-    background-color:rgba(0,0,0,.15);
+		background-color:rgba(0,0,0,.15);
     transition: .2s;
-  }
+	}
 }
