--- a/frontend-react/src/bootstrap.scss
+++ b/frontend-react/src/bootstrap.scss
@@ -1,3 +1,5 @@
+$font-family-base: Roboto, sans-serif;
+
 @for $i from 1 through 6 {
   $zIndexBackdrop:  #{1040 + (5 * $i)};
   $zIndexContent:  #{1040 + (5 * $i) + 2};
