--- a/frontend-react/src/components/Layout/AppNavbar.scss
+++ b/frontend-react/src/components/Layout/AppNavbar.scss
@@ -34,7 +34,7 @@ nav.navbar {
 			color:#fff;
 
 			&.active {
-				background-color:#ddd;
+				background-color:var(--light);
 				color:var(--dark);
 				border:none;
 			}
