--- a/frontend-react/src/components/Layout/fab.scss
+++ b/frontend-react/src/components/Layout/fab.scss
@@ -1,29 +1,75 @@
-.fab-dropdown {
-	z-index:1050;
-	max-height: calc(100vh - 7.5em);
-	max-width: 360px;
-	overflow-y:auto;
-	width:100vw;
-	border-radius:.5em;
-	box-shadow: 0px 0px 50px rgba(0,0,0,1);
-	padding:2em 1em 2em 1em;
+.fab {
+	display:flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	align-items: center;
+	position:fixed;
+	bottom:1.5em;
+	right:1.5em;
 
-	text-align:right;
+	> button {
+		border-radius:50%;
+		margin:0;
+		padding:.5em;
+		transform:translateX(4em);
+		z-index:2;
+	}
 
-	> a {
-		display:flex;
-		flex-direction: row-reverse;
+	.dropup {
+		> button {
+			margin:0;
+			border-radius: 50%;
+			padding-top:.7em;
+			padding-bottom:.7em;
+			padding-left: 4em;
+			padding-right: .5em;
+			z-index:0;
+				translate: .5s;
 
-		color:white;
+			&.badge-overlay {
+				position: relative;
 
-		> span {
-			display:flex;
-			flex-direction: row-reverse;
-			align-items:center;
+				span.badge {
+					position:absolute;
+					transform: translate(-40%,200%);
+					font-size:.8em;
+				}
+			}
 
-			svg {
-				margin-right:0;
-				margin-left:.5em;
+		}
+
+		.fab-dropdown {
+			z-index:1050;
+			max-height: calc(100vh - 7.5em);
+			max-width: 360px;
+			overflow-y:auto;
+			width:100vw;
+			border-radius:.5em;
+			box-shadow: 0px 0px 50px rgba(0,0,0,1);
+			padding:2em 1em 2em 1em;
+
+			text-align:right;
+
+			> a {
+				display:flex;
+				flex-direction: row-reverse;
+
+				color:var(--white);
+
+				> span {
+					display:flex;
+					flex-direction: row-reverse;
+					align-items:center;
+
+					svg {
+						margin-right:0;
+						margin-left:.5em;
+					}
+				}
+			}
+
+			> a:hover {
+				background-color:var(--primary);
 			}
 		}
 	}
