--- a/frontend-react/src/components/Layout/AppNavbar.scss
+++ b/frontend-react/src/components/Layout/AppNavbar.scss
@@ -1,9 +1,9 @@
-.navbar-brand {
-    font-weight: 700;
-}
-
 nav.navbar {
 	box-shadow:none;
+
+	.navbar-brand {
+    font-weight: 700;
+	}
 
 	.navbar-toggler {
     border: none;
@@ -42,6 +42,38 @@ nav.navbar {
 	}
 }
 
+.dropdown-divider {
+	border-top:rgba(255,255,255,.25) 1px solid !important;
+}
+//
+
+.sidebar-profile {
+	flex: 1 1 auto !important;
+	align-self: center !important;
+
+	margin-top:0 !important;
+	margin-bottom:0 !important;
+
+	text-align:right;
+
+	.dropdown-menu {
+		border: var(--dark) solid 1px;
+		background-color: var(--dark);
+		box-shadow:0 0 20px rgba(0,0,0,.25);
+		padding:.5em;
+
+		a.dropdown-item {
+			color:#fff;
+
+			&:hover {
+				background-color: var(--primary);
+			}
+		}
+	}
+}
+
+//
+
 .mediaPagePadding {
 	padding-top:5.5rem;
 }
@@ -51,6 +83,9 @@ nav.navbar {
 	padding:0rem 1rem;
 	display:none;
 }
+
+
+// Media query
 
 @media screen and (max-width:575px) {
 	.mediaPagePadding {
