--- a/frontend-react/src/components/Layout/fab.scss
+++ b/frontend-react/src/components/Layout/fab.scss
@@ -46,15 +46,27 @@
 			width:100vw;
 			border-radius:.5em;
 			box-shadow: 0px 0px 50px rgba(0,0,0,1);
-			padding:2em 1em 2em 1em;
+			padding:.5em;
 
 			text-align:right;
+
+			.dropdown-header {
+				font-weight:800;
+				color:#fff;
+				border-bottom:#fff 1px solid;
+			}
+
+			.dropdown-divider {
+				width:0px;
+				margin-left:auto;
+			}
 
 			> a {
 				display:flex;
 				flex-direction: row-reverse;
-
+				margin:.5em 0;
 				color:var(--white);
+				text-shadow: 0 0 3px black;
 
 				> span {
 					display:flex;
